--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1329,41 +1329,92 @@
   * 如果测量的任何东西都可以直接跟踪到某个人身上，这等于是在对人，而不是项目
   * 测量人就等于鼓励他们不认真对待测量
 
-### 2、根据项目完成度来衡量进度
+### 2、使用速度图表跟踪日程安排进度
 
-* 使用速度图表跟踪日程安排进度
+* ![速度图表](images/项目速度图.jpg)
 
-  ![速度图表](images/项目速度图.jpg)
-
-* 使用迭代内容图表跟踪总体进度
+### 3、使用迭代内容图表跟踪总体进度
 
   ![](images/迭代内容图.jpg)
 
-* 计算软件项目的挣值并无实际意义
+### 4、计算软件项目的挣值并无实际意义
 
   * 挣值可以用来衡量到目前为止已完成工作的价值
   * 然而软件总是不断发生变化，要想计算真正挣值，几乎不可能
 
-* 用EQF（估算质量因子）跟踪最初的估算
+### 5、用EQF（估算质量因子）跟踪最初的估算
 
   ![](images/估算质量因子.jpg)
 
-* 度量项目日程
+### 6、度量项目日程
 
   * 失去的时间永远无法再回来
 
   ![](images/估算日程和实际日程.jpg)
 
-* 人员分配情况
+### 7、人员分配情况
 
 ![](images/计划人员安排与实际人员安排.jpg)
 
-* 判断项目变化率
+### 8、判断项目变化率
   * 基于模块间接口的变化情况判断需求变更的重要程度，只影响一个模块就是微小变更，影响多于一个模块就是重大变更
 
     ![](images/需求变更图.jpg)
 
-    ​
+### 9、缺陷反馈率
+
+  * 缺陷反馈率（FFR）：被拒绝修复的缺陷数与修复缺陷总数之比
+  * 如果FFR高于10%，就说明开发人员遇到了问题，难以取得实际进展
+
+  ![](images/缺陷反馈率.jpg)
+
+### 10、测量查找和修复问题的成本
+*  需要解释某种状态的时候，适合采用表格展示定型数据
 
 
-* ​
+| 阶段    | 需求     | 设计     | 编码    | 测试    | 发布后   |
+| ----- | ------ | ------ | ----- | ----- | ----- |
+| 成本    | 1      | 10     | 100   | 1000  | 10000 |
+| 项目1成本 | 未测量    | 未测量    | 0.5人日 | 1人日   | 18人日  |
+| 项目2成本 | 0.25人日 | 0.25人日 | 0.5人日 | 0.5人日 | 8人日   |
+
+### 11、缺陷趋势
+  * 未关闭缺陷曲线斜率变成负值时，发布版本的风险降低
+
+![](images/缺陷趋势.jpg)
+
+### 12、展示测试进度
+
+  * 无论采取何种生命周期，都应该将测试和开发结合在一起
+
+  ![](images/测试进度.jpg)
+
+### 13、展示采用的实践
+
+* 不要强迫人们做的更好，应该去发现妨碍他们成功的原因
+
+![](images/按阶段交付实践雷达图.jpg)
+
+![](images/敏捷实践雷达图.jpg)
+
+### 14、度量敏捷项目
+
+* 速度图
+* 测试进度图
+* 迭代内容图
+* 实践雷达图（可选）
+
+### 15、使用项目气象报告
+
+* 以数据为依据，建立可信的气象报告
+* 每周发布气象报告
+
+![](images/项目气象报告.jpg)
+
+
+
+### 16、小结
+
+* 使用速度图和迭代内容图作为首选
+* 数据是工具，不是目的；要记住，图表应该为你服务
+* 如果无法获取需要的数据，项目经理就遇到了比数据更严重的问题，先解决这个问题吧
