--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1273,6 +1273,7 @@
 * 迭代审查会议
   * 迭代尾声，团队会向产品负责人展示工作成果
   * 可以随工作推进不断检视并调整工作方式
+  * 此外，团会会讨论开发速度图表等其他在项目仪表板上的团队数据，最终团队会进行一次中期回顾
 
 ### 3、会议疑难问题解答
 
@@ -1418,3 +1419,83 @@
 * 使用速度图和迭代内容图作为首选
 * 数据是工具，不是目的；要记住，图表应该为你服务
 * 如果无法获取需要的数据，项目经理就遇到了比数据更严重的问题，先解决这个问题吧
+
+## 十二、管理多地点项目
+
+### 1、尽可能让团队坐在一起
+
+* 沟通成本低
+
+### 2、识别项目的文化差异
+
+* 文化的差异体现在
+  * 可以讨论哪些话题
+  * 给予哪些奖励
+  * 对待彼此的方式
+  * 对行为的期望
+
+### 3、在团队间培养信任
+
+* 确保每个地点都有完整的项目可交付物
+* 确保各个团队可以相互协作
+  * 相互依存的团队之间不能存在竞争关系
+* 让人们建立个人接触
+  * 面对面个人接触中彼此建立的感觉，可以让他们在及时聊天或邮件上的沟通更有效率
+  * 人们离得越远，就越有可能对你产生误解
+
+### 4、在团队间使用互补实践
+
+* 使用互补生命周期
+  * 不要使用顺序式生命周期
+* 详细说明每个团队的里程碑和交接物
+  * 详细说明每个词汇的含义
+  * 详细说明里程碑的含义
+    * 确保每个人对里程碑的含义都有相同的理解
+    * 使用期望的结果定义里程碑
+* 详细说明团队了解自己工作进度的方法
+  * 管理多地点项目时，不要强制规定每个团队如何达成可交付物，应该说明你想要的结果
+    * 通常已经成熟的团队都会有成型的实践
+  * 无论管理哪种团队，都应该以结果为重，而不是方式方法或具体实践
+* 详细说明团队如何评审工作产品
+  * 技术评审可以提供额外的沟通框架和上下文，人们可以借此机会讨论项目问题
+    * 评审章程
+    * 评审需求
+    * 评审架构
+    * 评审规划
+    * 评审日程表
+  * 对于使用迭代和敏捷生命周期的项目，要求只评审当前迭代的需求和架构，而且重点评审接口，而不是功能的内部实现
+
+### 5、寻找潜在的多地点项目和不同文化导致的问题
+
+* 不同地点的团队对里程碑和交付物的定义可能不同，这会让团队无法正确理解他们应达成的承诺，还有交付给其他团队的工作成果
+* 项目进度的沟通和报告出现不一致，经常在项目初期发生
+* 对于彼此沐浴不同的项目团队成员来说，可能很难理解对方在说什么
+* 节假日、假期和加班都有可能产生沟通问题
+* 时差导致的问题
+* 使用一些通用工具的水平差异
+
+中途回顾有助于识别并解决这些问题，还能帮你发现并解决项目的特定问题，如果项目经理无法召集所有人，可以在每个地点进行回顾活动，并将各地的项目经理叫到一起，解决跨地点的问题
+
+### 6、项目外包需要注意的问题
+
+* 外包负责人需要了解产品
+* 挑选厂商
+  * 有相关领域知识
+  * 财务上是否可靠
+  * 厂商是否会侵犯相关知识产权
+* 与接包方管理层或项目经理建立信任关系
+* 规划和调整内部团队和外包团队的工作时间，让大家找出时间相互沟通
+* 用文档记录需求
+* 制订适当的变更流程
+* 选择需求相对稳定的项目外包
+* 为每个项目规划更长的时间，更多的资金预算，特别是外包关系建立初期
+* 在整个项目开发过程中，坚持接包方不变更团队
+* 对于声称自己负责项目工作的人们，要验证确实是他们在做项目的工作
+
+### 7、小结
+* 如果团队没有分布在同一楼层的10米之内，这就是一个多地点团队
+* 比起管理坐在一起的团队，管理多地点团队需要花更多时间，还需要更多项目推进技能
+* 如果项目经理无法建立起和远程团队的信任关系，项目就不可能成功
+
+
+
