--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1499,3 +1499,68 @@
 
 
 
+
+## 十三、在项目中集成测试
+
+将开发与测试同时进行，可以帮助项目经理从项目一开始就集成测试
+
+### 1、从一开始，就让人们将“减少技术债务”牢记心间
+
+* 项目启动时，让开发人员和测试人员认识到实际工作中走捷径的恶劣后果
+* 如果进行后续版本开发，可以安排先偿还之前欠下的技术债务
+
+### 2、使用小规模测试降低风险
+
+* 如果项目经理只能选择一种测试类型，那就用单元测试
+* TDD是实施单元测试的最佳方式
+* 要是项目经理无法让团队先写测试再写代码，起码要让他们开发完成生产代码后马上编写测试
+* 开发人员编写代码和缺陷
+  * 开发人员是要编写代码的
+    * 搭建系统架构
+    * 进行系统设计
+    * 编码
+  * 但是有些人忘记他们也会写出缺陷
+    * 在编写生产代码前写几行测试代码，可以让开发人员把生产代码写的更出色
+
+### 3、TDD是在项目中集成测试最简便的方式
+
+* TDD遵循如下流程
+  * 开发人员针对某个尚未开发的功能创建一个测试
+    * 这个测试应该失败
+    * 因为实现代码还不存在
+  * 然后开发人员加入能够使测试通过的最简单的实现代码
+  * 开发人员重新运行测试
+    * 如果实现代码能够通过测试，开发人员就重构以简化代码
+    * 如果代码无法通过测试，开发人员会继续修改代码，修改的同时不断重构
+      * 重构目标：变的更简单、运行更迅速、维护更简单 ------ 可以防止发生技术债务
+  * 随着开发人员继续工作，他们会运行所有测试，以保证不引入问题使得回归测试不能通过
+  * 开发人员会遵循这个循环过程，直到所有的功能全部实现
+* TDD不排斥一开始做设计，但是排斥一开始就做非常详细的设计（也被称为big design up front）
+* 不断演化产生的设计（emergent design）会更简单
+* 如果想要降低项目风险，不妨在项目风险最高的区域中使用TDD
+* 如果想要增加项目的价值，不妨在项目价值最高的区域中使用TDD
+* 如果开发人员不打算抛弃原型，那么原型最好也使用TDD
+* 如何让开发人员使用TDD
+  * 首先，项目经理要保证不会根据交付日期衡量开发人员的工作
+  * 其次，提供文章、博客供大家阅读和培训
+  * 接下来，寻找志愿者
+    * 不要强推TDD实践
+    * 可以这么说：“我担心在项目收尾时发现太多缺陷，到那时能做的事情就少多了，我听说TDD可以帮助解决这个问题，有没有人愿意试上几周，再告诉大家结果如何？”
+    * 如果没有志愿者，就准备度量开发速度和缺陷吧
+  * 在项目结束时，特别是缺陷数目居高不下的时候，项目经理可以着手推行TDD实践了
+  * 如果开发人员没有做单元测试，也别去审查或惩罚他们，要让他们认识到单元测试的价值
+
+### 3、使用多种测试技巧
+
+* 以手工黑盒测试作为唯一的测试方法，根本无法保证复杂系统没有问题
+* 单元测试：开发人员对类或函数进行测试，开发人员很难保证100%的单元测试覆盖率，除非先写测试
+* 组件测试：开发人员把一些功能单元组织起来，看能否完成预想的功能
+* 功能测试：从整体上测试一个功能，开发人员先验证是否实现了本应该完成的功能（正向路径），然后会让测试人员检查这些功能有没有做它不应该做的事情（负向路径）
+* 功能区域测试：测试人员检查一系列相互关联的功能
+* 集成测试：测试人员从整体上测试一些功能
+* 冒烟测试：开发人员或测试人员要负责编写冒烟测试，可以验证某个版本构建完成后，系统确实能够做些什么？
+* 为什么要关心单元测试覆盖率？
+  * 方便重构
+  * 能促成更好的接口设计
+  * 发现和修复缺陷的成本变低
+  * 人员流动影响降低，从测试中可以清晰了解代码的工作方式
