--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1550,7 +1550,7 @@
   * 在项目结束时，特别是缺陷数目居高不下的时候，项目经理可以着手推行TDD实践了
   * 如果开发人员没有做单元测试，也别去审查或惩罚他们，要让他们认识到单元测试的价值
 
-### 3、使用多种测试技巧
+### 4、使用多种测试技巧
 
 * 以手工黑盒测试作为唯一的测试方法，根本无法保证复杂系统没有问题
 * 单元测试：开发人员对类或函数进行测试，开发人员很难保证100%的单元测试覆盖率，除非先写测试
@@ -1564,3 +1564,22 @@
   * 能促成更好的接口设计
   * 发现和修复缺陷的成本变低
   * 人员流动影响降低，从测试中可以清晰了解代码的工作方式
+
+### 5、确定每个团队成员在测试工作中的角色
+
+* 开发人员很容易限定自己的工作，认为自己的职责就是设计和编写代码，他们总是看不到测试的重要性
+* 有太多的开发人员没有意识到，他们在编写代码的同时，也在创造缺陷
+* 复杂系统的测试工作可一点也不比开发轻松
+* 你的测试人员是否称职？以下问题中，你的回答一半以上为是，那你的测试人员就是二流水平
+
+| 问题                                       | 是／否  |
+| ---------------------------------------- | ---- |
+| 你的测试人员是否经常被排除在需求设计会议之外？                  |      |
+| 是不是只有靠偷听，你的测试人员才能了解到产品信息？                |      |
+| 你的测试人员对于工具的需求是不是经常被推迟或忽略？                |      |
+| 产品的可测试需求的建立是不是经常被推迟获忽略？                  |      |
+| 测试人员每个人平摊的培训经费预算是不是远少于开发人员？              |      |
+| 你的所有测试人员是不是可以呼唤的？也就是说他们掌握的技能，谁负责哪个项目都无碍大局。 |      |
+| 对于非敏捷项目来说，是不是只有在产品构建完成之后，你的测试人员才能和开发人员一起工作？原因是不是由于他们没有尽早参与到产品的需求和设计阶段？还是因为他们对于需求和设计了解不足，因此无法提供反馈？ |      |
+| 对于敏捷项目来说，你的测试人员是不是只跟产品负责人一起编写测试？其原因是不是由于他们无法完全理解产品内部机制，因此无法跟开发人员一起开发更复杂的测试？ |      |
+
