--- a/项目管理修炼之道.md
+++ b/项目管理修炼之道.md
@@ -1583,3 +1583,101 @@
 | 对于非敏捷项目来说，是不是只有在产品构建完成之后，你的测试人员才能和开发人员一起工作？原因是不是由于他们没有尽早参与到产品的需求和设计阶段？还是因为他们对于需求和设计了解不足，因此无法提供反馈？ |      |
 | 对于敏捷项目来说，你的测试人员是不是只跟产品负责人一起编写测试？其原因是不是由于他们无法完全理解产品内部机制，因此无法跟开发人员一起开发更复杂的测试？ |      |
 
+* 一流的测试人员
+  * 他们又有足够的创造力，在编码工作开始之前，就能评估系统的设计和架构
+  * 在代码编写阶段，他们会设计和实现的测试套件，包括自动化和手工
+  * 他们编写的测试，会以开发人员无法预料的方式去“折磨”系统
+  * 他们会衡量已经测试过的部分，并评估这部分的风险
+  * 他们还会思考系统的测试是否已经到位，能否帮助项目经理弄清当前版本的产品面临哪些风险
+  * 他们与开发人员的关系是对等的，他们是搭档关系，他们能够改变开发人员创建产品的方式
+
+### 6、正确的开发人员与测试人员之比应该是多少
+
+* 统计的比率从1:1.5到10:1都有，分析时需要考虑下列因素
+  * 需求、产品规模、产品复杂度，产品越复杂，测试也越复杂
+  * 你所在组织开发产品的方式，你的客户对于缺陷和延迟交付的忍耐程度
+  * 你的开发人员和测试人员的能力和职责，还有他们被分配到项目中的时间阶段
+
+
+* 产品风险对比率的影响
+
+  * 要想向系统增加更多功能，同时不导致问题，这几乎是不可能的
+
+  | 产品风险     | 系统是否存在该风险 |
+  | -------- | --------- |
+  | 大型系统     |           |
+  | 复杂的、实时的  |           |
+  | API定义不完整 |           |
+  | GUI依赖数据  |           |
+
+* 项目和流程风险对比率的影响
+
+| 项目和流程风险                         | 项目是否这样做了 |
+| ------------------------------- | -------- |
+| 我们总是会明确说明和管理我们的需求               |          |
+| 我们知道如何随项目推进评估产品架构               |          |
+| 我们会评估每个功能的设计                    |          |
+| 我们按功能逐个实现                       |          |
+| 为了进行自动化单元测试，我们拥有单元测试基础架构，而且也在使用 |          |
+| 我们有测试基础架构，供自动化系统测试使用            |          |
+| 我们在进行每日构建                       |          |
+| 我们会在跨职能团队中评审未解决的缺陷，以评估其影响       |          |
+| 我们拥有并使用每日构建和冒烟测试                |          |
+
+* 人员及其能力对比率的影响
+
+| 与人相关的风险                   | 项目中存在吗 |
+| ------------------------- | ------ |
+| 我们的开发人员对这类产品没有多少经验        |        |
+| 我们的测试人员对这类产品没有多少经验        |        |
+| 我们没有在开发人员的实践中构建反馈机制       |        |
+| 测试团队的测试能力有限，为开发人员提供的反馈也有限 |        |
+
+* 不存在永远正确的比率，不妨向自己和团队提出以下问题
+  * 我们该如何估算测试这个产品需要的工作量？
+  * 针对这个产品，我们需要哪些类型的测试？
+  * 要想完成这些测试，我们需要哪些类型的测试人员？各需要几人？
+  * 为了跟上这个项目开发工作的步调，我怎么知道需要多少测试人员？
+
+### 7、让测试与开发同步进行
+
+* 测试会让项目的风险展现于众人面前，大家越早看到这些风险越好
+* 在顺序式生命周期的项目中，要让测试人员参与到需求分析阶段，询问他们关于产品需求的反馈
+* 在采取迭代式生命周期的项目中，只要有可供测试的部分，就可以让测试人员尽早开始测试功能
+* 在敏捷项目中，要确保测试人员和开发人员一起工作，以开发技术层面的测试
+* 还要让测试人员与产品负责人一起，编写面向客户层面的测试
+
+### 8、为项目制定测试策略
+
+* 团队中若有测试经理或是测试主管，就要由他负责制定测试相关的策略，项目经理要审查这些策略，并确保你同意他们对于风险的评估
+
+### 9、 系统测试策略模版
+
+* 产品版本和概览
+  * 描述产品和版本说明，简要描述产品的工作方式，必要时可参考其他文档
+* 产品历史
+  * 用三四句话，概述说明产品之前的版本历史，包括缺陷历史
+* 待测试功能
+  * 列出所有待测试功能
+* 不需要测试的功能
+  * 如果知道哪些功能不必测试，在此列出
+* 包含和排除的环境配置说明
+  * 列出该项目中将要测试和不必要测试的硬件和软件配置
+* 环境需求
+  * 列出测试人员需要的特定测试环境
+* 系统测试方式
+  * 说明你将如何保证测试在必要的时候进行
+* 系统测试入口条件
+  * 产品在正式系统测试之前，必须符合此处列出的条件
+* 系统测试出口条件
+  * 产品在结束正式的系统测试之前，系统必须满足此处列出的条件
+* 测试交付物
+  * 测试的产物，比如日志、自动化测试、计划或度量标准
+* 其他参考文档
+  * 可能要在策略中引用的需求或是其他规范文档
+
+### 10、小结
+
+* 如果项目经理有在项目中集成测试的规划，你就可以做到
+* 使用TDD，可以提升产品的设计和代码的质量
+* 可以考虑在项目中使用测试连续体系
