--- a/创业就是创品牌.md
+++ b/创业就是创品牌.md
@@ -153,7 +153,7 @@
   * 现在是一个广告大爆炸的时代，广告太多，你的广告很容易被淹没，投入产出比往往不成正比，创业企业根本承受不了
   * 品牌经过一段时间的发展，在消费者心智中定位逐步建立起来后，确实需要加强广告的投入，目的是传播品牌定位，维护品牌并提升竞争门槛
 * 举个栗子
-  * 切糕王子：没做广告页打响品牌
+  * 切糕王子：没做广告也打响品牌
     * 千里送切糕支援云南鲁甸地震灾区的公益活动
 
 ### 6、品牌就是一个形象或理念
@@ -177,3 +177,168 @@
 * 举个栗子
   * 海尔从冰箱起家，先后进入洗衣机、空调、电视、小家电、厨房电器、电脑、手机等领域，而且均采用品牌延伸的方式
   * 结果是当各领域出现强势的专家品牌时，海尔在冰箱及洗衣机以外的领域都处于竞争劣势，空调竞争不过格力，电视竞争不过创维，豆浆机竞争不过九阳，微波炉竞争不过格兰仕，电脑竞争不过联想，厨房电器竞争不过老板，小家电上竞争不过美的
+
+## 四、创建成功品牌的最佳机会
+
+跟风：难以创建起一个成功品牌
+
+模仿：不可能创建一个成功品牌
+
+### 1、开创一个新品类
+
+* 在一个行业，开启一个有潜力的新品类，让品牌成为消费者心智中新品类的代表，并且主导该品类，就造就了一个成功品牌
+* 举个栗子
+  * 万路宝：男人的香烟
+  * 百事可乐：年轻人的可乐
+  * 康师傅：瓶装绿茶
+  * 脉动：维生素水
+  * 香飘飘：杯装的冲泡奶茶
+
+### 2、开创新品类的管理学依据
+
+* 企业唯一的目的就是创造客户，这是企业区别于其他任何组织的最重要的特征
+* 为实现这一目的，企业只有两项基本职能，那就是营销和创新
+  * 营销是企业的外部职能，它的目的是将产品卖给顾客，在外部创造顾客
+  * 创新是企业的内部职能，它的目的是创造满足顾客需求的产品，在内部创造顾客
+* 开创新品类实现了营销和创新的统一
+  * 在企业外部以市场竞争为导向，找到消费者心智中的品类空缺
+  * 然后回到企业内部指导产品创新，研发并生产出满足消费者潜在需求的产品
+  * 在通过营销的手段推向市场去创造顾客
+  * 更好的产品并不能创造顾客，它只是对原有顾客的消费升级，而创业企业又凭什么可以拿出比领先企业更好的产品呢？
+  * 不一样的产品（新品类）才能创造顾客，因为它提供了有别于原有产品的新选择
+
+### 3、品类的基本类型
+
+* 所有的购买行为需要回答两个基本的问题：一是买什么？二是去哪里买？
+  * 买什么：形成了第一种品类的基本类型，即产品品类
+    * 瓜子、运动鞋、内衣、空调、凉茶
+  * 去哪里买：形成了第二种品类的基本类型，即渠道品类
+    * 大型商超、便利店、电器城、大型购物中心、网上超市、网上综合商城、网上化妆品商城
+* 白电、黑电、生活家电、厨房电器等并非真品类，它们属于“范畴性概念”，可以称之为“伪品类”
+  * 辨别品类真伪一个方法就是看它是不是消费者做购买决策时涉及的最后一级分类
+
+### 4、对品类的重要认识
+
+* 行业划分的品类，从产品本身出发做出的物理分类
+  * 轿车、卡车
+* 心智认知的品类，是指消费者心智中对产品信息的归类，与行业划分的品类两者有时一致，有时不一致
+  * 安全的轿车、彰显尊贵的轿车、有驾驶乐趣的轿车
+  * 防蛀牙膏、美白牙膏
+* 品类分化
+  * 品类只会分化，不会融合
+  * 分化时商业发展的基本规律和源动力
+  * 大型计算机、中型机、微型机和个人电脑、笔记本电脑、平板电脑、掌上电脑
+* 商业融合失败的例子
+  * Win10操作系统，融合了平板、手机、PC的功能
+  * TCL的信息家电
+  * 会飞的汽车
+  * 能在水中开的汽车
+  * 咖啡可乐、奶咖、啤儿茶爽
+* 品类分化不会自动诞生新品牌，只有奖品类分化的趋势和企业发展战略相结合，并采取正确的品类品牌战略，才能诞生新的品类和代表品类的品牌
+
+### 5、开创新品类的疑问
+
+* 新品类的现有市场规模有多大
+  * 可以参考主要竞争对手目前的市场规模
+* 判断一个新产品是不是一个新品类
+  * 要有明确的差异性
+    * 消费者通过视觉、听觉、嗅觉、味觉及触觉轻易识别出其与众不同之处
+  * 要有明确的价值性
+    * 能有效满足消费者某方面的需求，或解决消费者某方面的问题
+
+### 6、开创新品类的九大方法
+
+#### 1、抢占市场空白
+
+* 市场空白是指消费者存在某类产品的潜在需求，但市场上并无此类产品存在
+* 创业者往往距离市场一线最近，因而了解市场情况，最有机会发现消费者的潜在需求及市场空白
+* 这是任何大企业的老板都很难做到的
+* 举个栗子
+  * 乐凯撒：榴莲披萨
+
+#### 2、抢占心智空白
+
+* 心智空白是指市场上虽然已经存在某类产品，但在广大消费者心智中并未出现该类产品的代表性品牌
+* 举个栗子
+  * 嘀嘀打车：后来居上，成就霸业
+
+#### 3、产品创新
+
+* 通过产品创新，对已有的产品进行改良、升级或换代，是开创新品类最常用的方法
+* 很多人从企业内部的角度出发，认为只是推出一款新产品，并不是新品类
+* 需要从消费者心智的认知角度出去判断这个产品是不是一个新品类
+* 举个栗子
+  * iPhone：开创职能手机新品类
+  * Nest：开创“智能恒温控制器”新品类
+
+#### 4、方便性包装
+
+* 在食品饮料行业，很多产品都是通过方便性包装开创了新的品类
+* 举个栗子
+  * 乐百氏：瓶装水
+  * 王老吉：罐装凉茶
+  * 金龙鱼：小包装食用油
+  * 恰恰：袋装瓜子
+
+#### 5、价格区隔
+
+* 价格是影响消费者购买的一个关键因素，不同的价格不仅可以明显区隔不同的品牌，还可以去圈定不同层次的顾客群
+* 举个栗子
+  * 芙蓉王：开创了“20-30元价格档香烟”的新品类
+  * 洋河：开创了“140-200元价格档白酒”的新品类
+  * 美食家：开创“高价爆米花”的新品类
+  * 小女当家：开创“高端中式简餐”新品类
+
+#### 6、规格区隔
+
+* 有形的产品总有尺寸、容量等规格大小之分，不同规格同样会在消费者的心智中造成不同的认知，进而成为消费者心智中不同信息格子（即不同的品类）
+* 规格区隔是最容易被忽略的一种新品类开发方法，因为它太简单、太明显了（大道至简，何必追求复杂）
+* 在产品爆炸的时代，选择已经成为一种障碍，消费者就需要更简单、直接的信息
+* 举个栗子
+  * 甲壳虫：开创“小型汽车”新品类
+
+#### 7、聚焦一类产品或服务
+
+* 在零售、餐饮及服务行业，聚焦是最重要的经营原则
+* 小市场开杂货店，大市场开专卖店
+* 通过聚焦经营某一类产品或服务，往往可以开创一个新品类或商业模式，从而建立起成功的品牌
+* 举个栗子
+  * 必胜客：聚焦披萨
+  * 达美乐：聚焦披萨外卖
+  * 肯德基：专营炸鸡
+  * 麦当劳：专营汉堡
+  * 星巴克：专营咖啡
+  * 国美电器：专营3C产品
+  * 都市丽人：专营女性内衣
+  * 玩具反斗城：专营玩具
+  * 哎呀呀：专营女性饰品
+  * 优衣库：专营时尚服饰
+  * 京东：专营网上3C产品
+  * 当当：专营网上书籍
+  * 酒仙网：专营网上酒水
+  * 麦包包：专营网上箱包
+
+#### 8、聚焦品类的一个次要特性或功效
+
+* 每个品类都有不止一个特性或功效，品类的各个特性或功效的重要程度是不一样的
+* 领导品牌往往占据了该品类最重要的特性或功效
+* 随着品类消费的逐渐成熟，就会分化出不同需求的潜在消费者，他们对品类的次要特性或功效也有补考的兴趣或需求
+* 通过聚焦品类的一个次要特性或功效可以开创一个新品类
+* 举个栗子
+  * 黑人牙膏：开创美白牙膏新品类
+  * 云南白药牙膏：开创牙龈止血牙膏新品类
+  * 田七牙膏：开创中药牙膏新品类
+  * 乐行：开创”便携平衡车“新品类
+
+#### 9、站在领导品牌对立面
+
+* 如果采取和领导品牌对立的品牌战略，那就可以在消费者心智中建立起不同品类的认知，从而开创一个新品类
+  * 产品可能和领导品牌并没有明显差别，但是潜在消费者会感觉不一样
+  * 这里讲的对立是战略层面的对立，而不是战术层面的对立
+  * 战略性的弱点往往就隐藏在战略性的优点（领导品牌去的成功的关键原因）的背面
+  * 对领导品牌战略性的弱点进行攻击，使其难以反击，才是最佳的对立面战略
+* 举个栗子
+  * 怪兽：第一个采用16盎司易拉罐包装的能量饮料（红牛：采用8.3盎司）
+  * 宝马：长期被奔驰压制，直到确定和奔驰相对立的品牌战略，宝马才翻身
+    * 奔驰靠车体大、马力强、豪华、行驶平稳在消费者心中建立起“乘坐舒适的高档汽车”的认知
+    * 宝马车体窄小灵活、让驾驶更有乐趣，并确定“终极驾驶机器”的宣传口号
