去掉杂乱字符

--- a/带人的技术.md
+++ b/带人的技术.md
@@ -1,13 +1,13 @@
 # 带人的技术
 
-![](https://github.com/jearry/StudyNote/blob/master/images/%E5%B8%A6%E4%BA%BA%E7%9A%84%E6%8A%80%E6%9C%AF.jpg?raw=true)
+![](images/%E5%B8%A6%E4%BA%BA%E7%9A%84%E6%8A%80%E6%9C%AF.jpg?raw=true)
 
 ## 一、教之前必须知道的事
 
 * 行为科学中教的技术
 
     * “行为科学管理”的基础是“行为分析学”，是一门以科学方法研究人类行为的学问
-    * 研究的目的：为了理解人为什么灰出现特定的行为？要怎样做才能加以改变？
+    * 研究的目的：为了理解人为什么灰出现特定的行为？要怎样做才能加以改变？
     * 主要特征：可重现；无论时间、对象或地点如何改变，都能得到相同的结果
     * 企业由20%的“英才”和80%的“庸才”组成，“行为科学管理”能够将80%的庸才培养成英才
 
@@ -29,7 +29,7 @@
 * 不要一开口就谈工作
 
     * 不要一开口就谈工作，要先闲话家常
-    * 建立互信、拉近彼此距离的方法其实很简单，那就是闲话家常
+    * 建立互信、拉近彼此距离的方法其实很简单，那就是闲话家常
 
 * 离职率和沟通的程度成反比
 
@@ -52,25 +52,25 @@
 
     * 若想通过分享，以便和下属奖励能够敞开心胸讨论工作的关系，最好的做法是，身为主管的你，先谈谈自己
 
-        谈论的项目           |内容
-        -------------------:|:-------------------
-        喜欢的书            |技术类书籍，看后感觉充实  
-        喜欢的音乐           |Beyond、张学友、刘德华、周华健 
-        最喜欢的电影          |周星驰（大话西游）
-        最喜欢的运动          |羽毛球
-        热衷的事物           |对新技术仍然热衷
-        尊敬的伟人           |邓小平
-        喜欢的名人           |乔布斯、罗胖子
-        小时候的趣事          |拆砖翻墙的故事，唯一一次被爸揍的故事
+        |  谈论的项目 | 内容                 |
+        | -----: | :----------------- |
+        |   喜欢的书 | 技术类书籍，看后感觉充实       |
+        |  喜欢的音乐 | Beyond、张学友、刘德华、周华健 |
+        | 最喜欢的电影 | 周星驰（大话西游）          |
+        | 最喜欢的运动 | 羽毛球                |
+        |  热衷的事物 | 对新技术仍然热衷           |
+        |  尊敬的伟人 | 邓小平                |
+        |  喜欢的名人 | 乔布斯、罗胖子            |
+        | 小时候的趣事 | 拆砖翻墙的故事，唯一一次被爸揍的故事 |
 
 * 讨论自己的失败故事而非成功经验
 
-    * 如果只专注于教导下属成功的方法，下属就会收到“我也要用这个方法”的信息
+    * 如果只专注于教导下属成功的方法，下属就会收到“我也要用这个方法”的信息
     * 如果他听到的是失败的例子，就会排除这个明显的错误，并从众多方法中找出有效的那一个
 
 * 使用教的技术，就能缩短培养人才的时间
 
-    * 企业时间观：在短时间内展现成果
+    * 企业时间观：在短时间内展现成果
     * 教育时间观：花上数月甚至数年实施教育
     * 主管必须兼具企业时间观和教育时间观
     * 企业之所以聘用有工作经验的人，为的是以金钱来换取培养人才的时间
@@ -78,21 +78,21 @@
 * 培养人才其实很简单
 
     * 比起培养没有明确目标的艺术家，培养有明确目标的下属，其实简单多了
-    * 企业的目标显而易见，主管的任务就是让下属成为能够达成既定任务或业绩的人
+    * 企业的目标显而易见，主管的任务就是让下属成为能够达成既定任务或业绩的人
 
 * 如何了解下属的烦恼
 
     * 身为主管的你，在教育下属时，最重要的养成“询问”的习惯
-    * 一开始询问那种完全不需要思考就能够回答的问题，从闲聊开始
+    * 一开始询问那种完全不需要思考就能够回答的问题，从闲聊开始
         * 吃饭了没？在哪吃的饭？
         * 搭什么车过来公司的？
         * 刚才出去外面有无下雨？
     * 接着在进一步询问更深入的问题，对方应该就会告诉你他的烦恼、不满和疑问了
 
-* 在认定是下属的错之前，请先反省自己
+* 在认定是下属的错之前，请先反省自己
 
     * 将下属已经接受教育缺毫无成果这件事，不应该归咎于缺乏干劲、热情或毅力等“想法或个性”
-    * 从行为科学的角度来看，所有成果都是人的“行为”产生的结果
+    * 从行为科学的角度来看，所有成果都是人的“行为”产生的结果
     * 既然已经教导下属，为什么成果还是不如预期？原因可能出在教导的方式
         * 教的太快
         * 说明太过抽象，下属无法理解
@@ -103,32 +103,32 @@
 * 将教的内容分为知识和技术
 
     * 在指导下属之前，最好还是先把要教的资料整理好
-    * 先将指导的内容分为“知识”和“技术”两个部分
+    * 先将指导的内容分为“知识”和“技术”两个部分
     * 把能够回答的当作“知识”，能够尝试去做的当作“技术”就可以了
-    * 只要把计划教授的内容区分为“知识”和“技术”，就能清楚判断教导的先后顺序，以及每一名下属应该学习的内容
-    
+    * 只要把计划教授的内容区分为“知识”和“技术”，就能清楚判断教导的先后顺序，以及每一名下属应该学习的内容
+
         区分知识和技术，以打保龄球为例
-        知识          | 技术
-        -------------|-------------
-        打球的礼仪       |拿球的方法
-        基本游戏规则      |助跑的方法
-        选球的方法       |丢球的方法
-        积分表上各种符号的意义|控球的方法
-        球的旋转和轨道之间的关系|
+        | 知识           | 技术    |
+        | ------------ | ----- |
+        | 打球的礼仪        | 拿球的方法 |
+        | 基本游戏规则       | 助跑的方法 |
+        | 选球的方法        | 丢球的方法 |
+        | 积分表上各种符号的意义  | 控球的方法 |
+        | 球的旋转和轨道之间的关系 |       |
 
 * 请问一下你如何请孩子帮你跑腿
 
-    * 孩子第一次出门帮你跑腿时，你会将他应该做的事逐项条列清楚，然后简单易懂地教导他（行为分解）
-    * 面对下属，你也应该这么做
+    * 孩子第一次出门帮你跑腿时，你会将他应该做的事逐项条列清楚，然后简单易懂地教导他（行为分解）
+    * 面对下属，你也应该这么做
     * 务必逐一确认每个人都可以想到的事项，甚至是认为没有必要确认或理所当然应该知道的事
     * 然后针对下属从来没有做过的行为，必须像孩子第一次帮你跑腿一样逐步教导他们
 
 * 彻底分解优秀员工的工作状况
 
     * 无论哪一种职业，工作内容都是由许多“行为”组成的，只要加以分解并且条列出来，就能知道你应该教授的内容
-    * 分解的对象：能够顺利完成工作创造成果的员工的行为
-    * 因为能够创造成果的员工，必定会采取能够创造成果的行为
-    * 由于工作有各种不同的做法，因此理想的分解方式是，分解数名员工的行为，然后剔除个性化的行为，提取共性的行为
+    * 分解的对象：能够顺利完成工作创造成果的员工的行为
+    * 因为能够创造成果的员工，必定会采取能够创造成果的行为
+    * 由于工作有各种不同的做法，因此理想的分解方式是，分解数名员工的行为，然后剔除个性化的行为，提取共性的行为
     * 条列出来的重要项目，则可以当作是确认工作完成的“检查清单”
 
 * 了解下属知道什么？能够做什么？
@@ -136,20 +136,20 @@
     * 确认下属对工作的了解以及能力所及的程度
     * 绝对不要自以为是的认为他应该知道什么，或假设应该做得到
     * 确认下属“知识”的部分时，可以采取一问一答的方式进行
-    * 确认下属“技术”的部分时，可以采取角色扮演的方式模拟工作的实际情况
+    * 确认下属“技术”的部分时，可以采取角色扮演的方式模拟工作的实际情况
         * 最重要的是根据检查清单，确定“观察重点”
-    * 掌握了下属“了解”和“办得到”的事，然后对照“检查清单”，就能厘清应该指导下属的内容
+    * 掌握了下属“了解”和“办得到”的事，然后对照“检查清单”，就能厘清应该指导下属的内容
 
 ## 四、怎么教？
 
 * 以具体的语言指示或指导下属
 
-    * “真诚待客”、“确实做好”、“尽早提出”这三个指示的共性是含糊不清而且抽象
-    * 在指示下属采取行动时，把话说得越具体越好，但事实上很多主管说起话来模凌两可
+    * “真诚待客”、“确实做好”、“尽早提出”这三个指示的共性是含糊不清而且抽象
+    * 在指示下属采取行动时，把话说得越具体越好，但事实上很多主管说起话来模凌两可
 
 * 具体告知下属应该采取的行动
 
-    * 当你想以语言具体表述行为时，可以参考行为分析学在定义“行为”时说采用的“MORS法则”（具体性法则）
+    * 当你想以语言具体表述行为时，可以参考行为分析学在定义“行为”时说采用的“MORS法则”（具体性法则）
         * 可测量（Measurable） 可量化
         * 可观察（Observable） 直观
         * 可信赖（Relialbe） 可辨识
@@ -163,14 +163,14 @@
     * “要待客如亲”
     * “要密切沟通”
     * “要提升营业额”
-    * “要集思广益”
+    * “要集思广益”
     * 你能将平时说使用类似以上的字眼，翻译成具体的行为吗？？？
 
 * 优秀的领导擅长翻译
 
     * 所谓的翻译，就是将公司高层提出的抽象信息或指令，解释成具体的“行为”，告知第一线的下属
     * 如果高层提出“我们要成为坚如磐石的组织”，主管也照本宣科大喊“我们要成为坚如磐石的组织”，只会让下属一头雾水，不知道你在说什么
-    * 优秀的管理层都能够自然诠释高层抽象的说法，将它简单易懂地传递给下属
+    * 优秀的管理层都能够自然诠释高层抽象的说法，将它简单易懂地传递给下属
 
 
 ## 五、教到哪里？
@@ -196,15 +196,15 @@
 
 * 制作不必要清单
 
-    * 只锁定最重要的两三项工作，其他的不做，这就叫“劣后顺序”
+    * 只锁定最重要的两三项工作，其他的不做，这就叫“劣后顺序”
     * 20%的员工创造80%的业绩，前20%的员工都能自然决定出”劣后顺序“，剩下的80%的员工需要主管明确指示”劣后顺序“
-    * 如果能够制作与”必做“清单相反的”不必做“清单，确认下属没有不必要的工作，这才是最理想的做法
+    * 如果能够制作与”必做“清单相反的”不必做“清单，确认下属没有不必要的工作，这才是最理想的做法
 
 * 除了分内的工作，也要教导下属工作的意义和全貌
 
     * 在教导下属工作时，必须确实的解释工作的意义，例如“为什么这么做”
-    * 当你希望某人帮你找来石头用来堆砌炉灶时，没有人会不告诉他目的而只是要求他去找石头
-    * 为了让下属了解事情的重要性，必须让他们掌握即将执行的业务的定位和整个计划的意义，也就是计划的全貌
+    * 当你希望某人帮你找来石头用来堆砌炉灶时，没有人会不告诉他目的而只是要求他去找石头
+    * 为了让下属了解事情的重要性，必须让他们掌握即将执行的业务的定位和整个计划的意义，也就是计划的全貌
 
 * 不要相信“我懂了”这句话
 
@@ -226,17 +226,17 @@
     * 即使你知道对方希望你这么做，但要实践和持续却很困难
     * 即使知道“行动”是必要的，也会忍不住偷懒或选择轻松的路走，这是人的天性
     * 自主性是非常不可靠的东西
-    
+
 ## 六、称赞很重要
 
 * 利用考满分的成功经验支持下属成长
 
-    * 让一个不喜欢读书的五年级小学生做四年级或三年级的测验，这样大部分学生应该都可以考满分
-    * 这样一来，他不仅能够获得成就感，同时也会产生自信，觉得只要自己愿意就一定能够做到
+    * 让一个不喜欢读书的五年级小学生做四年级或三年级的测验，这样大部分学生应该都可以考满分
+    * 这样一来，他不仅能够获得成就感，同时也会产生自信，觉得只要自己愿意就一定能够做到
     * 主管的鼓舞和支持可提高教育下属的效果，最具代表的做法就是交付下属他确实能够完成的工作，以此累计成功的经验
-    * 为了教会那些不知道怎样做事或怎么教都不会的下属，请给他们一份他们一定能完成的工作，帮助他们考满分
+    * 为了教会那些不知道怎样做事或怎么教都不会的下属，请给他们一份他们一定能完成的工作，帮助他们考满分
 
-* 培养思考能力也需要分解行为
+* 培养思考能力也需要分解行为
 
     * 如果是为了刺激下属的“思考能力”，你必须将思考的过程分解成一个个的“行为”，让他了解思考的先后顺序并且加以说明
     * 首先，要让下属利用基本的工作为自己加分，因为这样他就会有自信自己思考。
@@ -250,34 +250,34 @@
         * ABC之间有明显的因果关系，A同时受到C的影响
     * 所有行为都建立在类似的因果关系之上，人类的“意志”对这样的因果关系没有太大影响
     * 如果你想要下属做出或学会某种行为，与其鼓励他们加把劲或振作一点，还不如控制A、B、C之间的因果关系来的有效
-    * 如：扇扇子如果会凉快，大家就会继续扇；吃饼干如果得到很好吃的结果，就会再吃一个
+    * 如：扇扇子如果会凉快，大家就会继续扇；吃饼干如果得到很好吃的结果，就会再吃一个
 
 * 如何强化行为
 
-    * 无论是工作还是培养人才，主管希望下属实践或学习的行为，并不会立刻出现明确的结果
+    * 无论是工作还是培养人才，主管希望下属实践或学习的行为，并不会立刻出现明确的结果
     * 此时，在行为之后，刻意给对方想要的“结果”的做法，就能配上用场
     * 简单来说，最有效的就是主管的赞美和认同
-    
+
 * 给不擅长称赞下属的主管的建议
 
     * 不少企业的主管，都表示自己不擅长称赞下属
-        * 40岁以上的人，那个时代都认为严格管教和斥责之女、学生、下属都是理所当然的事
-        * 只有在成功挑战非常困难的任务之后，才可能获得称赞
+        * 40岁以上的人，那个时代都认为严格管教和斥责之女、学生、下属都是理所当然的事
+        * 只有在成功挑战非常困难的任务之后，才可能获得称赞
         * 完成日常工作，基本很少有人获得称赞
     * 称赞下属的目的，是希望强化你希望下属学习的行为
         * 应该称赞他的行为，而不是人品和个性
-    * 不用搞清楚下属在想什么，重点放在他的行为，认同他的工作成果，确实称赞他就行了
+    * 不用搞清楚下属在想什么，重点放在他的行为，认同他的工作成果，确实称赞他就行了
 
 ## 七、训斥和生气是两件不同的事
 
 * 为什么可以训斥，但是不可以生气？
 
     * 愤怒的定义：自己制定的目标和现状之间存在极大的差距，在找不到拉近这个差距的方法时说产生的情绪
-    * 没有人会生婴儿的气
+    * 没有人会生婴儿的气
         * “还有两年就要上幼儿园了，不要在地上爬了，赶快起来学走路”
         * 如果对婴儿生气，他就不会想站起来走路，因为他觉得这么做你又会生气
         * 行为分析学将这样的现象解释为“愤怒使行为消失”
-    * 训斥的定义：在必须改善对方行为时，给予提点或要求的行为
+    * 训斥的定义：在必须改善对方行为时，给予提点或要求的行为
 
 * 训斥他人时，该做和不该做的事
 
@@ -288,7 +288,7 @@
 
 * 重点在于谁负责称赞和训斥
 
-    * 如果主管平时能够适当评估下属的行为，让下属觉得是因为在他手下工作而能享受到工作的乐趣；被这样的主管称赞，下属一定会表现积极
+    * 如果主管平时能够适当评估下属的行为，让下属觉得是因为在他手下工作而能享受到工作的乐趣；被这样的主管称赞，下属一定会表现积极
     * 如果主管平时只会抱怨自己的主管和公司，无论是被这样的主管称赞还是批评，下属应该都无法接受
     * 最根本的问题在于，你自己是不是一个值得尊敬的主管或前辈？
 
@@ -297,46 +297,46 @@
 *  抛弃动机的神话
 
     * 不要以“动机”或“干劲”等模凌两可的说法来判断下属的行为，请计算他们行动的次数
-    * 只要拜访的客户数在持续增加，就表示下属有干劲
-    * 如果拜访的客户数在减少，不管当事人怎么说，都表示动机在降低
+    * 只要拜访的客户数在持续增加，就表示下属有干劲
+    * 如果拜访的客户数在减少，不管当事人怎么说，都表示动机在降低
 
-* 强化教学内容，让下属继续保持
+*  强化教学内容，让下属继续保持
 
-    * 所谓的“强化”，指的是让下属重复某一动作的行为
-    * 如果在采取行动后，得到的结果是自己想要的，当事人就会持续重复这个动作；这是人类的行为原理，这种现象被解释为”行为因为得到想要的结果而被‘强化’“
-    * 所有的结果都是平时各种”行为“累计而成，如果你希望获得某种结果，就只能将以往的行为，确实改变为可创造出结果的“行为”
+    * 所谓的“强化”，指的是让下属重复某一动作的行为
+    * 如果在采取行动后，得到的结果是自己想要的，当事人就会持续重复这个动作；这是人类的行为原理，这种现象被解释为”行为因为得到想要的结果而被‘强化’“
+    * 所有的结果都是平时各种”行为“累计而成，如果你希望获得某种结果，就只能将以往的行为，确实改变为可创造出结果的“行为”
     * 如果下属在你的指引下，采取能够创造结果的行为，请务必给予好评
     * 要持续一个无法获得好评的“行为”，是非常困难的一件事，因此，身为主管的你，给予下属的“评价”影响非常之大
 
-* 计算行为的次数，给予正确评价
+*  计算行为的次数，给予正确评价
 
     * 测量下属采取行动的次数时，最重要的是锁定能创造成果的“行为”，避免计算无关紧要的行为
-    * 如果无法以数据评估这个行为，可将它分为“优／良／普通／差／劣”五个等级
+    * 如果无法以数据评估这个行为，可将它分为“优／良／普通／差／劣”五个等级
     * 必须注意，不要让下属与其他员工相互比较，重要的是记录自己针对特定行为所设定的目标达成率
 
-* 利用定期反馈完成指导
+*  利用定期反馈完成指导
 
-    * 下属计算出“行为”的次数，同时做好图表之后，接下来就轮到主管的反馈，确定下属顺利采取了行动，就给予称赞，比如：“你做得不错”
+    * 下属计算出“行为”的次数，同时做好图表之后，接下来就轮到主管的反馈，确定下属顺利采取了行动，就给予称赞，比如：“你做得不错”
     * 根据行为分析的实验结果，给予反馈的有效周期长达2周，如果是一个月之后才给予反馈，就完全没有“强化”的效果
-    * 无论怎么忙，反馈都需要按计划进行，如果三天打鱼，两天晒网，会明显削弱“强化”的效果
+    * 无论怎么忙，反馈都需要按计划进行，如果三天打鱼，两天晒网，会明显削弱“强化”的效果
     * 只要主管、前辈和下属一同找出可创造成果的“行为”，同时加以记录次数并且给予反馈，下属就能持续的做成这种“行为”
     * 好处
-        * 由于是下属和主管一起针对共同目的一起努力，同时确实评估结果，因此可以加强双方的互信度
+        * 由于是下属和主管一起针对共同目的一起努力，同时确实评估结果，因此可以加强双方的互信度
         * 由于指导的目标明确，所以能确实提升主管培育人才的方法和管理技巧
 
-* 你能够把工作交给下属吗？
+*  你能够把工作交给下属吗？
 
     * “辅助”和“撤除”是行为分析学中常用的词
-        * 辅助：辅助对方方便采取某种行动
+        * 辅助：辅助对方方便采取某种行动
         * 撤除：解除辅助
         * 游泳池的里浮板、儿童单车的辅助轮都是一种辅助
     * 不要让下属“骑着有辅助轮的单车”到处跑
-    * 持续辅助却不知道何时应该放手，会妨碍下属的真正成长和自立
+    * 持续辅助却不知道何时应该放手，会妨碍下属的真正成长和自立
 
 # 九、这个时候该怎么办？
 
 * 面对任何下属，教法的基础都一样
-    
+
     * 指导的重点始终是“行为”
     * 主管对下属必须常抱尊敬之意
 
@@ -348,27 +348,27 @@
 
 * 二度就业的员工
 
-    * 厘清下属“知道／不知道”和“办得到／办不到”的事，对不知道和办不到的事情加以指导
+    * 厘清下属“知道／不知道”和“办得到／办不到”的事，对不知道和办不到的事情加以指导
     * 彻底执行“劣后顺序”（不需要做的事情）
-    * 把有经验的下属当成咨询的对象，多请教对方的意见
+    * 把有经验的下属当成咨询的对象，多请教对方的意见
 
 * 因理想和现实的落差而烦恼的新人
 
     * 说明企业理念和日常业务的关系
         * 每天工作和公司理念看似毫无关系，事实上却十分密切
         * 为实现公司的理念，每个部门都必须负担一部分必须达成的任务
-        * 包括你在内的所有员工，每日所采取的行动，都可以提高公司的业绩，公司才可能服务于客户和社会，也才能贯彻理念，实现愿景
+        * 包括你在内的所有员工，每日所采取的行动，都可以提高公司的业绩，公司才可能服务于客户和社会，也才能贯彻理念，实现愿景
 
 * 优秀的员工
 
     * 无论下属多么优秀，主管如果不闻不问，一定会影响下属的表现
     * 在没有约束的情况下，能自我管理的人，大约只有3-5%
-    * 以较低的频率检查优秀员工的工作进度
-    * 让优秀员工能够确实感受到自己深受主管信赖，是件非常重要的事
+    * 以较低的频率检查优秀员工的工作进度
+    * 让优秀员工能够确实感受到自己深受主管信赖，是件非常重要的事
 
 * 兼职和派遣员工
 
-    * 详细说明工作的全貌和兼职人员的定位，让当事人强烈感受到“自己的重要性”
+    * 详细说明工作的全貌和兼职人员的定位，让当事人强烈感受到“自己的重要性”
 
 * 外籍员工
 
@@ -388,40 +388,40 @@
 
     * 重点应该是了解某个概念或学习某种规则，拼命抄写诗与原本的目的毫无关系的“无用行为”
     * 请下属填写希望他们记住的关键字
-    * 希望下属思考时，可让他们自由发挥，并且写下来
+    * 希望下属思考时，可让他们自由发挥，并且写下来
 
 * 石田式研讨会的法则
 
     * 不要只靠说 
-        * 只说会让与会者觉得厌烦
-        * 充分利用其它信息传递方式
+        * 只说会让与会者觉得厌烦
+        * 充分利用其它信息传递方式
     * 分别使用讲义和ppt
-        * 使用ppt营造一个“参与”的气氛
+        * 使用ppt营造一个“参与”的气氛
         * 可以看ppt上的图片一起思考，能提高参与感，凝聚向心力
         * 将讲义的重点整理成ppt
     * 读与写
         * 书写非常适合用于记忆重点或思考授课的内容
         * 读用来帮助学习者吸收知识
     * 讲述的内容
-        * 需要记忆的重点
+        * 需要记忆的重点
         * 帮助与会者理解教学内容的范例
-        * 依照与会者的行业、职业或阶层提供可供活用的重点
+        * 依照与会者的行业、职业或阶层提供可供活用的重点
 
 * 提高学习效果的九种方法
 
     * 引起注意
         * “我们现在开始”
-        * 欣赏短片方式暖场
+        * 欣赏短片方式暖场
         * 提一个与教学内容有关，但有点突兀的问题，以此提升学习者的好奇心
     * 提示学习目标
-        * 让他们更专心
+        * 让他们更专心
         * 提高学习欲望
     * 回忆必要的知识
         * 长期记忆里的知识可自由回忆和运用
     * 提示学习内容
         * 人类会将眼睛耳朵接收到的信息，暂时存储在“短期记忆”里，因为容量有限，存储之前会先筛选
         * 筛选的方法就是只存储对自己有利或需要的信息，其他一概舍弃
-        * 如果希望学习者能记住你希望他记住的事，存储在“短期记忆”中，最重要的是明确凸显相关重点
+        * 如果希望学习者能记住你希望他记住的事，存储在“短期记忆”中，最重要的是明确凸显相关重点
     * 提供学习辅导
         * 协助学习者将“短期记忆”的信息移入长期记忆的方法
             * 以不同的说法说明
@@ -441,9 +441,9 @@
 
     * 6:3:1原则
         * 基础60分钟，应用30分钟，发挥10分钟
-    * 90/20/8法则
+    * 90/20/8法则
         * 参与研讨的人员，能否理解内容的时间平均为90分钟，能够边听边记忆的时间只有20分钟
-        * 研讨的过程不能超过90分钟
+        * 研讨的过程不能超过90分钟
         * 每20分钟就要改变形式或进行的速度
         * 每8分钟让学员有参与的机会
 
