第五章完成

--- a/创业就是创品牌.md
+++ b/创业就是创品牌.md
@@ -248,7 +248,7 @@
 
 ### 6、开创新品类的九大方法
 
-#### 1、抢占市场空白
+#### 1）抢占市场空白
 
 * 市场空白是指消费者存在某类产品的潜在需求，但市场上并无此类产品存在
 * 创业者往往距离市场一线最近，因而了解市场情况，最有机会发现消费者的潜在需求及市场空白
@@ -256,13 +256,13 @@
 * 举个栗子
   * 乐凯撒：榴莲披萨
 
-#### 2、抢占心智空白
+#### 2）抢占心智空白
 
 * 心智空白是指市场上虽然已经存在某类产品，但在广大消费者心智中并未出现该类产品的代表性品牌
 * 举个栗子
   * 嘀嘀打车：后来居上，成就霸业
 
-#### 3、产品创新
+#### 3）产品创新
 
 * 通过产品创新，对已有的产品进行改良、升级或换代，是开创新品类最常用的方法
 * 很多人从企业内部的角度出发，认为只是推出一款新产品，并不是新品类
@@ -271,7 +271,7 @@
   * iPhone：开创职能手机新品类
   * Nest：开创“智能恒温控制器”新品类
 
-#### 4、方便性包装
+#### 4）方便性包装
 
 * 在食品饮料行业，很多产品都是通过方便性包装开创了新的品类
 * 举个栗子
@@ -280,7 +280,7 @@
   * 金龙鱼：小包装食用油
   * 恰恰：袋装瓜子
 
-#### 5、价格区隔
+#### 5）价格区隔
 
 * 价格是影响消费者购买的一个关键因素，不同的价格不仅可以明显区隔不同的品牌，还可以去圈定不同层次的顾客群
 * 举个栗子
@@ -289,7 +289,7 @@
   * 美食家：开创“高价爆米花”的新品类
   * 小女当家：开创“高端中式简餐”新品类
 
-#### 6、规格区隔
+#### 6）规格区隔
 
 * 有形的产品总有尺寸、容量等规格大小之分，不同规格同样会在消费者的心智中造成不同的认知，进而成为消费者心智中不同信息格子（即不同的品类）
 * 规格区隔是最容易被忽略的一种新品类开发方法，因为它太简单、太明显了（大道至简，何必追求复杂）
@@ -297,7 +297,7 @@
 * 举个栗子
   * 甲壳虫：开创“小型汽车”新品类
 
-#### 7、聚焦一类产品或服务
+#### 7）聚焦一类产品或服务
 
 * 在零售、餐饮及服务行业，聚焦是最重要的经营原则
 * 小市场开杂货店，大市场开专卖店
@@ -318,7 +318,7 @@
   * 酒仙网：专营网上酒水
   * 麦包包：专营网上箱包
 
-#### 8、聚焦品类的一个次要特性或功效
+#### 8）聚焦品类的一个次要特性或功效
 
 * 每个品类都有不止一个特性或功效，品类的各个特性或功效的重要程度是不一样的
 * 领导品牌往往占据了该品类最重要的特性或功效
@@ -330,7 +330,7 @@
   * 田七牙膏：开创中药牙膏新品类
   * 乐行：开创”便携平衡车“新品类
 
-#### 9、站在领导品牌对立面
+#### 9）站在领导品牌对立面
 
 * 如果采取和领导品牌对立的品牌战略，那就可以在消费者心智中建立起不同品类的认知，从而开创一个新品类
   * 产品可能和领导品牌并没有明显差别，但是潜在消费者会感觉不一样
@@ -342,3 +342,205 @@
   * 宝马：长期被奔驰压制，直到确定和奔驰相对立的品牌战略，宝马才翻身
     * 奔驰靠车体大、马力强、豪华、行驶平稳在消费者心中建立起“乘坐舒适的高档汽车”的认知
     * 宝马车体窄小灵活、让驾驶更有乐趣，并确定“终极驾驶机器”的宣传口号
+
+## 五、创建成功品牌的十大要点
+
+### 1、为新品类命名
+
+* 新品类命名的基本原则：简单、直接、通俗、易懂并符合大众认知
+
+* 新品类的主要命名方式：
+
+  * 品类+品类
+    * 维生素水：脉动
+    * 大理石瓷砖：简一
+  * 核心特性+品类
+    * 智能手机：iPhone
+    * 纯净水：怡宝
+    * 功能饮料：红牛
+    * 经济型酒店：如家
+  * 核心原料（材料）+品类
+    * 花生糖：黄老五
+    * 葡萄酒：张裕
+    * 苹果醋：天地壹号
+  * 制作方法（工艺）+品类
+    * 红烧肉
+    * 手工面
+    * 烤羊肉串
+    * 膨化饼
+  * 核心功能（用途）+品类
+    * 减肥茶：碧生源
+    * 登山鞋：骆驼
+    * 保暖内衣：南极人
+    * 去屑洗化水：海飞丝
+
+
+  ### 2、为新品类定位
+
+  * 确定合适的竞争对手
+      * 找不到明确的竞争对手，就丧失了明确的顾客来源，新品类的发展就会失去方向
+      * 爱迪生发明的电灯，竞争对手是蜡烛
+      * 卡尔・本茨发明的汽车，竞争对手是马车
+      * 黄老吉竞争对手不是其他凉茶而是汽水饮料
+  * 符合消费者的心智认知
+      * 酸梅汤：去油腻的饮料？
+          * 明显不符合消费者心智认知，酸梅汤一般具有消暑开胃的功效，而非去油腻
+      * 唱吧：你手机的KTV
+          * 尽管呱呱K歌伴侣上线更早，也累积不少用户，但是“你手机的KTV”相当于给这个新品类做了一个定位，而这个定位恰恰击中很多用户的痛点
+* 三种新品类定位方法
+  * 抢先占位
+    * 黄老吉：罐装凉茶
+  * 关联定位
+    * 七喜柠檬味汽水：非可乐
+  * 重新定位老品类
+    * 发掘老品类的战略性弱点，新品类提供的利益必须有充分的支持点
+    * 斯科普漱口水：李施德林漱口水，味道差（药味重）的漱口水
+
+### 3、取一个好的品牌名称
+
+* 品牌命名的基本原则是独特、简单、顺口及反应品类属性或某种特性
+  * 好的栗子：红牛、怪兽、小米、iPad、喜之郎、哇哈哈、恰恰、真功夫
+  * 差的栗子：统一、原叶、东方既白、许个愿吧、张君雅小妹妹、水立方、京通工、京瓷
+* 品牌命名的四个要点
+  * 反应品类属性或某种特性
+    * 好的品牌名能让消费者望文生义，反映出品牌所属的品类或品类的某个特性，给人以专家品牌的印象或产生正面的联想
+  * 要独特
+    * 不独特就容易混淆，就会失去品牌名的最基本价值---识别
+    * 常见的误区是取一个通用名
+  * 要简单
+    * 现在是一个信息大爆炸的时代，品牌太多，性质容量有限且厌恶复杂
+    * 一个长的、复杂的品牌名难以进入潜在消费者的心智，且很不利于口碑传播
+  * 易于口头传播
+    * 避免使用生僻字
+    * 避免设计师作怪
+    * 避免使用谐音字
+    * 避免文字混搭
+    * 避免文字混淆
+
+### 4、给品牌设计一个独特的视觉符号
+
+独特的视觉符号可以让品牌有效区隔于竞争对手，方便消费者选择和记忆，有些还能传递出独特的定位和价值
+
+#### 1）选择品牌的主色调
+
+* 选择能够凸显品类特性的颜色
+  * 可乐是红棕色的，可口可乐选红色作为主色调，这也能体现可口可乐是正宗货的品牌认知优势
+  * 新品类的开创者，享有优先选择颜色的权力，应该毫不犹豫地占据能够凸显品牌特性的颜色
+* 选一种颜色比选多种颜色更好
+  * 一种颜色会更醒目，更具有识别性和记忆性，一个品牌应该聚焦于一种颜色
+* 选择基本色比选择混合色更好
+  * 基本色：红、橙、黄、绿、蓝、黑、白、灰，黑白灰是中间色，一般做辅助色使用
+  * 红色：暖色调，人们看到红色，往往会产生前进、靠近的视觉错觉，所以红色往往表示活力和热情，更适合快消品
+  * 蓝色：冷色调，人们看到蓝色，往往会产生后退、远离的视觉错觉，所以蓝色往往表示和平和沉静，也表示智慧和远见，更适合高科技企业
+  * 橙色接近红色，绿色接近蓝色，黄色处于光谱的中间，处于肉眼能识别的波长的中间段，是最亮的颜色
+  * 白色代表纯洁，黑色代表奢侈，蓝色代表领先地位，紫色代表尊贵，绿色代表环保和健康，金色代表成功
+* 选择和领先品牌相对立的颜色
+  * 差异化是创建品牌的核心原则
+* 长期保持品牌主色调的一致性
+  * 品牌的创建需要一个较长的时间，品牌主色调一旦确立，就不能轻易更改
+
+#### 2）产品包装
+
+* 产品包装是视觉符号的第二大要素，产品包装就是产品穿的衣服，要建立品牌，就需要采取与众不同的包装，特别要和领导品牌区别开来
+* 举个栗子
+  * 可口可乐的弧形瓶
+  * 好时之吻巧克力的小三角袋
+  * 费列罗巧克力金色小球包装
+
+#### 3）品牌标识
+
+* 品牌标识是为代替品牌名称而使用的，目的就是代表品牌
+* 很多知名品牌经常把品牌标识和名称放在一起，只是多此一举
+* 品牌标识要求简洁、独特、最好寓意品类属性或品类的某个特性
+* 一个品牌标识最好只指向一个品牌，否则就失去其代表性
+* 举个栗子
+  * 奔驰
+  * 耐克
+
+#### 4）广告形象／人物标志
+
+* 经典的广告形象或品牌人物不仅是品牌重要的识别标志，还能传递出品牌独特的定位和价值
+* 广告形象不易经常变化，这回造成消费者的认知混乱，且品牌信息无法积累
+* 举个栗子
+  * 万宝路：定位男人的香烟，广告宣传一直使用牛仔作为主角，购买者不乏女性
+
+
+#### 5）产品外观
+
+  * 独特的产品外观可以让消费者一样辨识出，加深消费者对品牌的印象
+  * 举个栗子
+    * LV包遍布包身的花纹
+    * 宝马的前珊栏
+
+### 5、聚焦一款产品
+
+* 消费者心智容量有限，而且害怕混乱，产品线过长不利于在消费者心智中建立起新品类及新品牌的清晰认知
+* 聚焦一款产品，可以大大降低消费者的选择障碍，有利于新产品的推广
+* 另外从运营的角度来看，聚焦一款产品可以有效提升运营效率和降低运营成本，而且可以让企业更专注的做好产品
+* 举个栗子
+  * 金罐的红牛
+  * 红罐的黄老吉
+  * 反例：Apple watch
+    * 价格从349美元到1.2万美元，共有34款
+    * 如此宽泛的产品线，完全是一个营销的灾难
+      * 让消费者无比混乱，无从选择
+      * 花349美元买Sport版的无法在花549美元买不锈钢表壳版的朋友前炫耀
+      * 花549美元买不锈钢表壳版的无法在花1w美元买18K进手表的朋友前炫耀
+      * 智能手表是很时尚很酷的产品，如果不能耍酷不能炫耀，就会失去很多价值
+  * 反例：中搜搜悦
+    * 定位“我的移动世界”，服务项目很多，包含个性化阅读、兴趣圈社区服务、电商、移动网站导航、APP下载等
+    * 你知道它是干什么的吗？你需要什么服务的时候会首先想到它？
+    * 信奉所谓的“移动互联网生态”，试图成为一个“有容乃大”的移动互联网入口级应用，从而获得海量用户，进而大量变现，真是一厢情愿
+
+### 6、界定原点人群
+
+* 原点人群是新品类消费的高势能人群，他们可能是行业的专家或重度消费者，也可能是意见领袖
+* 特别是专业性较强或者高档的消费品，例如专业体育用品、汽车、红酒，更适合从原点人群切入
+* 这样做的目的
+  * 吸收他们更有价值的建议，毕竟他们比起其他消费者更懂该类产品，从而有助于企业改进产品和提升运营
+  * 借助他们的影响力推广品牌，因为他们在该品类产品上的消费具有示范带动效应，甚至能引领潮流
+  * 减少企业推广新品类的风险，初期通过聚焦小部分原点人群，避免没有针对性的“撒大网”，减少投入，提升成功率
+* 举个栗子
+  * 耐克：从专业运动员切入
+  * Facebook：从大学生到社会大众
+
+### 7、确定原点市场（线下市场）
+
+* 理想的原点市场应该具有如下特征
+  * 当地消费者对品类或相关品类的消费基础好，消费观念较为成熟，对新品类的接受度高
+  * 在目标市场中具有典型性和代表性，能产生辐射效应
+  * 市场容量较大，有培育新品牌的“肥沃土壤”
+* 举个栗子
+  * 金六福：从郑州走向全国
+  * 脑白金：从无锡走向全国
+
+### 8、聚焦原点渠道
+
+* 很多人认为新品牌一开始进入的渠道越多，销售网络越广，能见度越高，销售量就越大，就越有利于新品牌的推广，这是一个误区，缺点如下
+  * 战线过长，会导致企业推广资源分散
+  * 会吸引过多不适宜的消费人群
+  * 会让企业失去产品和运营不断调整和完善的时机
+  * 会过早地被强势对手盯上、封杀，对于初创企业，无异于一种“自杀”行为
+* 举个栗子
+  * 黄老吉：从餐饮渠道切入
+  * 美即：从屈臣氏起步
+
+### 9、采用公关的方式启动新品牌
+
+* 消费者的心智缺乏安全感，为了避免风险，他们往往拒绝购买一个新品牌，因为新品牌缺乏认知度和可信度
+* 公关是指通过媒体及消费者口碑等具有可信度的第三方来传播、推广品牌，可以有效减少消费者的顾虑，促进其尝试性的购买
+* 消费者对新闻的关注度也远远高于广告
+* 作为开创新品类的新品牌，其本身也蕴含很大的新闻性和公关潜力
+* 举个栗子
+  * 切糕王子：天价切糕事件，千里送切糕（云南鲁甸发生6.5级地震，阿迪力向灾区捐赠5000公斤切糕）
+  * 美体小铺：天然护肤、环保事业践行者，绿色和平赞助商，参与“拯救鲸鱼行动”，成为媒体关注的焦点
+
+### 10、投入时间和耐心
+
+* 时间是打造品牌的重要的必要条件，创业者需要有足够的耐心投入到品牌的创建中
+* 越是有发展潜力的新品类，起成长速度往往越慢
+  * 新品类的完善和成长需要一个较长时间
+  * 新品类被人们广泛认知和接受也需要一定时间
+  * 互联网有时虽然可以加速新品类的发展壮大，但也需要一定的时间练好内功，蓄势待发
+  * 一般而言，线下品牌需要3-6年的缓慢发展期，才可能迎来快速发展的拐点
+  * 线上品牌，如果战略得当，有足够的资源投入，确实可以快速发展；不过过快的发展，容易让品牌风尚化，起也快，落也快
