第七章完成

--- a/创业就是创品牌.md
+++ b/创业就是创品牌.md
@@ -544,3 +544,155 @@
   * 互联网有时虽然可以加速新品类的发展壮大，但也需要一定的时间练好内功，蓄势待发
   * 一般而言，线下品牌需要3-6年的缓慢发展期，才可能迎来快速发展的拐点
   * 线上品牌，如果战略得当，有足够的资源投入，确实可以快速发展；不过过快的发展，容易让品牌风尚化，起也快，落也快
+
+## 六、如何做好品牌经营
+
+### 1、推广新品类
+
+* 新品类刚推出的市场几乎为0，这需要企业投入足够的资源去开拓市场
+* 这时品牌并无多大价值，企业应该教育消费者，推广新品类而不是品牌，只有新品类发展壮大了，作为新品类的开创者的品牌才更有价值
+
+### 2、防止品牌风尚化
+
+* 给足新品牌成长的时间
+  * 新品牌的成长需要一定的时间，包括产品的改进、运营的完善和消费者的接受，都不能操之过急
+  * 在这个浮躁之气盛行的商业社会，创业者必须有长远做事业的决心和耐心，而不应该想着尽快卖产品，尽快赚钱
+  * 举个栗子
+    * 黄老吉：为了让罐装凉茶适宜更多人经常性饮用，加多宝公司经过十几次配方和口味调整
+* 谨防掉进“闪电战”的陷阱
+  * 很多企业信奉品牌营销的“闪电战”，认为段时间内快速、大规模的推广能够引起消费者的广泛关注并引起消费潮流，进而快速抢占市场
+  * 殊不知，短时间内大量广告投入，快速的广铺渠道，容易导致品牌“风尚化”，快起快落
+  * 举个栗子
+    * 哇哈哈格瓦斯：昙花一现
+
+### 3、保持聚焦
+
+* 为品牌增加更多的顾客，而不是为顾客提供更多的选择
+  * 为实现公司业绩快速增长，创业企业最常见的做法是扩充产品线，为顾客提供更多选择，以求提升客单价或更好的吸引顾客
+  * 事实上，通过扩充产品线的业绩增长没有多大意义，因为品牌涵盖的东西越多，产品就会失去差异化，竞争力就会减弱
+  * 从长远来看，失去差异化的品牌终将被顾客抛弃
+* 在尚未完全主导一个品类之前，不应该推出其他品类的产品
+  * 开创新品类只是手段，目的是主导一个品类，从而造就一个成功品牌
+  * 主导一个品类前推出其他品类，会分散企业的精力和资源，不利于原品类的推广，并削弱品牌的竞争力
+  * 企业不应该以销售额的增长为目标，增长只是企业做对事情后自然而然的结果；为了增长而增长，最终必定会让企业陷入困境
+* 推出其他品类的产品，最好启用一个新品牌
+  * 真正成功的品牌是某个品来的代表，一个品牌只能代表一个品类
+  * 很多企业没有这样做，以为这样可以有效借助原有品牌的知名度和影响力来推广新品，然而事与愿违
+    * 品牌延伸会破坏原有品牌已有的定位，稀释品牌价值，从而降低品牌的竞争力
+    * 采用延伸品牌的新产品不具有可信度，竞争力也不强，因为消费者会认为你做这个产品不够专业
+    * 竞争不激烈的领域，品牌延伸短期或许有效，但长期来讲，面对强势的专家品牌时，延伸品牌就会难以招架
+* 举个栗子
+  * 海尔的“品牌大伞”（反例）
+    * 海尔几乎无所不包，可是你买什么的时候会首先想到海尔？
+  * 保洁的“品牌大树”（正例）
+    * 品牌经理制度，每个品牌经理负责一个品牌，并相互独立运营，各自对地区总部负责
+
+### 4、谨慎促销
+
+* 降价促销是把双刃剑，杀伤的更多的是品牌自身；降价促销，短期可能会增加销量，长期来看会降低销量，因为你告诉顾客不要在正常价格的时候购买你的产品
+* 从本质上讲，降价促销和打造品牌是背道而驰的
+* 不要对新产品做促销
+  * 新产品本身就该具有一定的吸引力，而不该通过促销来拉动销售
+  * 刚推出新产品的时候，应该尽量采用公关的手段来传播和推广
+  * 多数情况，人们并不会因为促销而购买一个不足够了解的新产品
+  * 对于一个新产品，消费者的价格敏感性并不高，企业不需要自作多情通过降价来讨好顾客
+* 尽量只对老顾客开展促销
+  * 能有效回馈老顾客，增加他们满意度，并促进口碑传播
+  * 如果新老兼顾，老客户就会感觉没有得到重视，促销效果反而不好
+  * 奢侈品牌为了维持其自身的品牌身份和价值，绝不会轻易打折，在换新的时候真对淘汰品的打折促销也只会悄悄的通知部分优质老顾客
+* 不要频繁促销
+  * 频繁促销给人的感觉就是在清仓甩卖，是教育消费者不要在正常价位购买
+* 尽量不要直接降价
+  * 直接降价就等于告诉消费者你原来的定价太高了，从而失去品牌的信誉
+* 促销的时限尽量短
+  * 否则顾客不会重视，企业的正常销售也会受到不利影响
+* 如果你想打造一个强势品牌，首先就要忘记促销
+  * 促销，从根本上讲，反映的是企业（老板）短期的、急功近利的心态，而不是打造品牌的、长期的心态
+
+### 5、用好公关
+
+* 不以直接促进销售为目的，而是为了增加公众对品牌的了解和好感，最好能有效传递品牌的定位
+* 举个栗子
+  * 切糕王子：为高考考生补充能量
+  * 红牛：“能量课堂，手机换红牛”
+
+### 6、做好广告
+
+* 品牌定位确定后，在合适的时间，通过适量的广告可以增加品牌的可见度，传播并加强消费者对品牌定位的认知，有效形成品牌竞争力，并提升竞争门槛，从而有效维护品牌
+
+### 7、容纳竞争
+
+* 新品类的推广和发展壮大，需要更多的同行加入，共同做大品类市场，更多的产品，更多的货架展现，才能吸引消费者更多的关注和消费热情
+* 竞争对手的加入也可以促进品牌自身不断的完善和进步，从而走的更远
+
+### 8、重新定位
+
+* 作为新品类的开创者品牌，其在发展之处的定位就是新品类的定位
+* 随着新品类的发展，越来越多的竞争对手加入到品类的市场中，且品类发展趋于成熟，这时就需要对品牌进行重新定位，以适应竞争需要
+* 常见的定位有：品类开创者、正宗、销量领先、领导品牌等
+* 举个栗子
+  * 可口可乐：正宗货
+  * 香飘飘：开创者
+
+### 9、进化品牌
+
+* 品类发展到一定阶段后，作为品类的开创者，应该不断改进迭代产品，进化品牌，以稳固自己在品来中的领导地位，同时引领行业的发展
+* 举个栗子
+  * swatch手表，诞生之初只是为了与来自日本的低端手表竞争，后来swatch找到新的方向，重点研发和生产时尚手表，从而开创“时尚手表”的新品类
+
+### 10、分化品类
+
+* 创建成功品牌的最佳机会来自于新品来，而新品来源自老品类的分化
+* 每个品类都有其生命周期，到了一定时间老品类就会走向衰亡
+* 企业应该看到品类的发展趋势，把握分化的机会，适时推出新品牌，进入下一个打造品牌的过程
+
+## 七、最重要的品牌法则
+
+### 1、成为第一
+
+* 成为第一胜过做的更好，在潜在消费者心智中先入为主，要比让他们相信你的产品优于该领域的领先品牌容易得多
+  * 消费者的心智难以改变
+  * 消费者心智时缺乏安全感的，他很难相信一个宣称更好的新品牌，从而不会轻易购买一个新品牌
+* 第一的威力
+  * 中国第一个进入太空的航天员是谁？第二个是谁？
+* 成为第一的领导品牌
+  * 在任何领域，领导品牌几乎都是那些第一个进入潜在消费者心智中的品牌
+  * 烤鸭的全聚德、包子的狗不理、白酒的茅台、香烟的中华、花生油的鲁花、凉茶的王老吉
+* 如何成为第一
+  * 如果你不是第一个进入某个品类，那么就创造一个能使自己成为第一的品类
+  * 开发一个新产品的时候，首先要问自己不是“和领先品牌相比，这个新产品哪里更好”，而是“这个新产品有什么不同，能否成为一个新品类”
+  * 很多消费者会对”不同的产品“感兴趣，而很少会对”宣称更好的新产品“感兴趣
+
+### 2、差异化
+
+* 要么差异化，要么低价；在如今这个产品严重同质化的时代，没有差异化的品牌只能靠低价虚弱的存活，甚至淘汰出局
+* 领导品牌拥有”最好的产品“的认知以及最高品牌溢价能力，所以可以活得最好
+* 差异化是一个消费者认知层面的概念，而不是企业内部的概念，所以不能只停留在产品层面。
+  * 产品不同的成分、工艺、特性、功效及包装这些是差异化概念
+  * 成为第一、领导地位、经典、市场专长、最受青睐、热销及新一代产品这些也是差异化概念
+
+### 3、聚焦
+
+* 太阳具有比极光强大无数倍的能量，但由于分散，人的皮肤都可以照射太阳，而激光由于高度集中，可以轻松切割钢板
+* 一个真正成功的品牌就是某个品类的代表，如果你的品牌过于分散，它就无法成为某个品类的代表
+* 聚焦就意味着舍弃，没有舍弃就没有聚焦，如果你想为顾客提供所有产品活满足所有顾客的需求，你就不可能打造出一个强大的品牌
+  * 如果格力没有舍弃空调以外的家电业务，就不可能造就一个世界第一的空调品牌
+  * 如果玩具反斗城没有舍弃玩具以外的百货业务，就不可能早就一个世界第一的玩具连锁品牌
+* 长期聚焦一类产品时，你就会在潜在消费者心智中建立起一个品类专家的形象，甚至会成为该品类的代名词
+  * 空调不是格力发明的，格力做空调时，春兰是中国空调业的老大，不幸的是，春兰制订了2000年要达到180亿的销售目标，基于空调单品无法实现这一目标，春兰随后进入摩托车、卡车及高能动力电池等领域，业务失去焦点，品牌失去代表；而格力始终聚焦、深耕于空调领域，很快就超越了春兰
+* 认知的聚焦
+  * 是为了提升消费者认知的效率，主要体现在品牌对外传播的信息上
+  * 举个栗子
+    * 星巴克对外传播的一致信息基本是关于它高品质咖啡的，从而在消费者心智建立起“星巴卡==好咖啡”的品牌认知
+* 运营聚焦
+  * 是为了提升企业内部的运营效率，主要体现在品牌涵盖的产品线上，最佳做法是聚焦一个核心品项，然后围绕着这个核心品项合理的配置产品线
+  * 举个栗子
+    * 真功夫以香汁排骨饭为核心品项并主推，围绕周围还配有冬菇滑鸡、酸菜卤肉饭、肉饼饭、榨菜牛肉饭等
+* 品牌的光环效应
+  * 如果一个品牌建立起一种明显的认知优势，那么它在潜在消费者心中可能还会赋予它更多的认知优势
+  * 举个栗子
+    * 更安全的轿车也意味着其工艺好喝技术领先
+    * 更防蛀的牙膏也意味着其专业度高及品质好
+* 举个栗子
+  * 长城汽车，在里斯中国的指导下，长城汽车开始品牌战略重整，核心策略是聚焦发展SUV，逐步放弃轿车，适当保留皮卡
+  * 老板电器，在里斯中国的指导下，聚焦发展吸油烟机；传播以大吸力油烟机替代高端厨房电器，所有传播资源都投入到吸油烟机，其他品类不做推广；方太定位自己为“厨房电器”，然后在消费者认知中并不存在“厨房电器”这个品类，消费者普遍考虑的是“抽油烟机买什么品牌”、“燃气灶买什么品牌”，虽然消费者购买厨房电器有成套的习惯，而吸油烟机在厨房电器中，处于决定选择的关键地位。从实践结果来看，老板电器的做法更有效（不只是吸油烟机稳坐行业第一，燃气灶和消毒柜也在2013、2014年超越方太获得第一，并保持至今）。
