完成第八章

--- a/创业就是创品牌.md
+++ b/创业就是创品牌.md
@@ -696,3 +696,26 @@
 * 举个栗子
   * 长城汽车，在里斯中国的指导下，长城汽车开始品牌战略重整，核心策略是聚焦发展SUV，逐步放弃轿车，适当保留皮卡
   * 老板电器，在里斯中国的指导下，聚焦发展吸油烟机；传播以大吸力油烟机替代高端厨房电器，所有传播资源都投入到吸油烟机，其他品类不做推广；方太定位自己为“厨房电器”，然后在消费者认知中并不存在“厨房电器”这个品类，消费者普遍考虑的是“抽油烟机买什么品牌”、“燃气灶买什么品牌”，虽然消费者购买厨房电器有成套的习惯，而吸油烟机在厨房电器中，处于决定选择的关键地位。从实践结果来看，老板电器的做法更有效（不只是吸油烟机稳坐行业第一，燃气灶和消毒柜也在2013、2014年超越方太获得第一，并保持至今）。
+
+## 八、互联网品牌战略
+
+### 1、何为互联网品牌
+
+* 只有因互联网而生且完全依托互联网发展的品牌才是互联网品牌
+
+### 2、互联网的商业价值
+
+* 互联网的商业价值主要体现在其作为信息与渠道两大载体的价值
+* 把互联网当作载体就是利用互联网传播信息或销售产品
+  * 传播信息与传统媒体区别是互动性
+  * 销售产品和传统渠道的区别是直销性
+* 如果你想要建立一个互联网品牌，你就不该只把互联网当作一个载体，而应该把它当作一项全新的业务来独立运营
+  * 发展出全新的品牌战略及运营系统
+  * 启用一个全新的品牌
+  * 一个品牌同时进入线上和线下渠道就是脚踏两只船，就是典型的战略骑墙
+  * 启用一个能与线下品牌相区隔的品牌，这样才能释放品牌的最大潜能，从而获得最佳发展
+
+### 
+
+
+
