--- a/创业就是创品牌.md
+++ b/创业就是创品牌.md
@@ -3,6 +3,7 @@
 ![](images/创业就是创品牌.png)
 
 * 如果你把产品当成竞争的终极武器，那么你即使短暂成功也终将失败
+* 真正能让你赢得竞争的是品牌而不是产品
 * 品牌才是企业的核心，创业就是创品牌
 
 ## 一、创业企业的品牌机会
@@ -12,7 +13,7 @@
 * 自然界为商业界提供了现成的模型
   * 《物种起源》
 * 品类是商业界的物种
-  * 品类是顾客心智认知的品类，而完全是行业或企业划分的“品类”
+  * 品类是顾客心智认知的品类，而不是行业或企业划分的“品类”
 * 分化诞生新品类
   * 新品类会不断诞生
   * 老品类会不断消亡
@@ -71,11 +72,11 @@
 
 * 心智模式一
   * 以品类思考，用品牌表达
-  * 消费者想要小费某个品类时，往往会直接购买某个品牌
-    * IPhone
+  * 消费者想要消费某个品类时，往往会直接购买某个品牌
+    * iPhone
     * 王老吉
 * 心智模式二
-  * 在消费某个品类时，消费者心智中会自动形成该品类的品牌阶梯，知道自己的消费行为
+  * 在消费某个品类时，消费者心智中会自动形成该品类的品牌阶梯，指导自己的消费行为
 
 ### 3、品牌的二元法则
 
@@ -87,7 +88,7 @@
 
 ### 4、品牌背后的关键力量
 * 真正促进人们购买某个品牌的根本原因是品类，而不是品牌本身
-* 品类的领导品牌
+* 首选品类的领导品牌
 
 ### 5、品牌价值的决定因素
 * 一个是品牌所属品类的市场规模
@@ -120,7 +121,7 @@
 
 * 第一、品牌是产品的品牌，它不能脱离产品而存在，随着销量的增加，品牌自然能在消费者心中建立起一定的品牌认知
 * 第二、如果品牌没有找到一个明确的定位，仅靠一个所谓的品牌形象或理念，确实无法有效促进产品的销售
-* 第三、产品卖的再多，如果没能形成差异化的品牌认知，没有创建品牌，当竞争加剧后还能靠降价来为止销量，最后必然被市场淘汰
+* 第三、产品卖的再多，如果没能形成差异化的品牌认知，没有创建品牌，当竞争加剧后还能靠降价来维持销量，利润率必然下降，最后酒会被市场淘汰
 * 品牌创建和产品销售是相辅相成的，品牌创建能推动产品的销售，产品销售有助于品牌的创建
 * 举个栗子
   * 淘宝上大部分商家都是冲着卖产品去的，为了销量不惜牺牲利润，为了赚钱，不惜丢掉商誉
@@ -136,7 +137,7 @@
   * 海王银得菲：扑了个空
     * 康泰克因为PPA事件产品下线，海王药业推出海王银得菲，诉求“治疗感冒快”，却并不能有效赢得消费者；因为康泰克已经占据了治疗感冒快这个心智位置，不含PPA的新康泰克推出后，市场又很快回到新康泰克这边
   * 白加黑：发掘潜在需求
-  * 蜜桃：跨境电商，逃不过巨头的魔爪
+  * 蜜桃：跨境电商，逃不过巨头的魔爪（差异化思维还是不错）
 
 ### 4、提升知名度就能促进销售吗
 
@@ -226,7 +227,7 @@
   * 防蛀牙膏、美白牙膏
 * 品类分化
   * 品类只会分化，不会融合
-  * 分化时商业发展的基本规律和源动力
+  * 分化是商业发展的基本规律和源动力
   * 大型计算机、中型机、微型机和个人电脑、笔记本电脑、平板电脑、掌上电脑
 * 商业融合失败的例子
   * Win10操作系统，融合了平板、手机、PC的功能
@@ -234,7 +235,7 @@
   * 会飞的汽车
   * 能在水中开的汽车
   * 咖啡可乐、奶咖、啤儿茶爽
-* 品类分化不会自动诞生新品牌，只有奖品类分化的趋势和企业发展战略相结合，并采取正确的品类品牌战略，才能诞生新的品类和代表品类的品牌
+* 品类分化不会自动诞生新品牌，只有将品类分化的趋势和企业发展战略相结合，并采取正确的品类品牌战略，才能诞生新的品类和代表品类的品牌
 
 ### 5、开创新品类的疑问
 
@@ -305,9 +306,9 @@
 * 举个栗子
   * 必胜客：聚焦披萨
   * 达美乐：聚焦披萨外卖
-  * 肯德基：专营炸鸡
-  * 麦当劳：专营汉堡
-  * 星巴克：专营咖啡
+  * 肯德基：聚焦炸鸡
+  * 麦当劳：聚焦汉堡
+  * 星巴克：聚焦咖啡
   * 国美电器：专营3C产品
   * 都市丽人：专营女性内衣
   * 玩具反斗城：专营玩具
@@ -402,7 +403,7 @@
   * 好的栗子：红牛、怪兽、小米、iPad、喜之郎、哇哈哈、恰恰、真功夫
   * 差的栗子：统一、原叶、东方既白、许个愿吧、张君雅小妹妹、水立方、京通工、京瓷
 * 品牌命名的四个要点
-  * 反应品类属性或某种特性
+  * 反映品类属性或某种特性
     * 好的品牌名能让消费者望文生义，反映出品牌所属的品类或品类的某个特性，给人以专家品牌的印象或产生正面的联想
   * 要独特
     * 不独特就容易混淆，就会失去品牌名的最基本价值---识别
@@ -642,7 +643,7 @@
 
 ### 10、分化品类
 
-* 创建成功品牌的最佳机会来自于新品来，而新品来源自老品类的分化
+* 创建成功品牌的最佳机会来自于新品类，而新品类来源自老品类的分化
 * 每个品类都有其生命周期，到了一定时间老品类就会走向衰亡
 * 企业应该看到品类的发展趋势，把握分化的机会，适时推出新品牌，进入下一个打造品牌的过程
 
